# blabout-monorepo

./: .gitignore  README.md  WARP.md  cloudbuild.yaml  deploy-instructions.md  deploy-to-cloud-run.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agents/: README.md
agents/business/: compliance_officer.py  decision_maker.py  engineering_manager.py  marketing_agency_agent.py  quality_control.py
agents/design/: frontend_designer.py  graphic_designer.py  interactive_motion_designer.py  ux_ui_designer.py
agents/research/: fomc_research_agent.py  llm_auditor_agent.py  quant_analyst.py
agents/shared/: base_agent.py
agents/software/: ai_engineer.py  api_specialist.py  data_engineer.py  database_administrator.py  devops_engineer.py  frontend_developer.py  generative_ai_specialist.py  mobile_developer.py  opensource_agent.py  performance_engineer.py  predictions_engineer.py  release_manager.py  scraping_agent.py  security_engineer.py  site_reliability_engineer.py  software_architect.py  software_bug_assistant_agent.py  test_automation_engineer.py  testing_engineer.py  updater_agent.py
agents/tools/: adk_adapter.py  documentation_agent.py  google_cloud_api_documentation_agent.py
backend/: Cargo.toml  app.yaml  cloudbuild.yaml  wrangler.toml
backend/src/: ai_service.rs  auth_paseto.rs  db.rs  main.rs  worker.rs
desktop/: package.json
desktop/public/: index.html
desktop/src/: main.js  preload.js
frontend/: .dockerignore  .env.example  .env.local  .eslintrc.js  Dockerfile  app.yaml  nginx.conf  package-lock.json  package.json  playwright.config.js  server.js  start-server.js  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.tsx  App.tsx  globals.css  index.css
frontend/src/components/: AgentCard.tsx  AuthCallback.jsx  AuthWrapper.tsx  Card.tsx  ChatAgent.tsx  Dashboard.jsx  Dashboard.tsx  GlassButton.tsx  GlassNav.tsx  GoogleAuth.tsx  HomePage.jsx  Layout.tsx  LoginPage.tsx  OutputPanel.tsx  WorkflowVisualization.tsx  WorkspaceCanvas.tsx  WorkspaceDashboard.tsx  WorkspaceSettings.tsx
frontend/src/providers/: PostHogProvider.jsx
frontend/src/store/: authSlice.ts  store.ts  workspaceSlice.ts
frontend/src/types/: speech.d.ts
frontend/tests/: example.spec.js
mcp-servers/: composio-server.json  filesystem-server.json  linkedin-mcp-server.js  mcp_servers.github.json
mcp-servers/mcp-gamma/: .dockerignore  .gitignore  AGENT_INSTRUCTIONS.md  Dockerfile  README.md  package-lock.json  package.json  test-auth.sh  test-ping.sh  tsconfig.json  vitest.config.ts
mcp-servers/mcp-gamma/src/: config.test.ts  index.test.ts  index.ts  integration.test.ts  performance.test.ts  test-helpers.ts
mcp-servers/mcp-gamma/src/utils/: debug.ts  responseTracker.ts
mobile/: app.json  eas.json  package-lock.json  package.json
mobile/src/: App.tsx
shared/: package.json
shared/utils/: index.js
