[package]
name = "monorepo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# HTTP Client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Cloudflare Workers compatibility
worker = { version = "0.0.21", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Real-time features
redis = { version = "0.24", features = ["tokio-comp"] }

[features]
default = []
cloudflare = ["worker", "wasm-bindgen"]

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"
required-features = ["cloudflare"]
